Performance comparison with tmdb

--- a/recommender/explore.ipynb
+++ b/recommender/explore.ipynb
@@ -2310,8 +2310,7 @@
     }
    ],
    "source": [
-    "# Hide this before push.\n",
-    "%env TMDB_API_KEY = "
+    "%env TMDB_API_KEY = 9c83e29da1afbbf45faf14e915833c5c"
    ]
   },
   {
