--- a/recommender/explore.ipynb
+++ b/recommender/explore.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Content-based recommender system"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -2373,7 +2381,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 12805  100 12805    0     0   128k      0 --:--:-- --:--:-- --:--:--  128k\n",
+      "100 12805  100 12805    0     0   142k      0 --:--:-- --:--:-- --:--:--  142k\n",
       "\u001b[1;39m[\n",
       "  \u001b[0;32m\"Una notte\"\u001b[0m\u001b[1;39m,\n",
       "  \u001b[0;32m\"Nightcap\"\u001b[0m\u001b[1;39m,\n",
@@ -2441,7 +2449,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 12875  100 12875    0     0   151k      0 --:--:-- --:--:-- --:--:--  151k\n",
+      "100 12875  100 12875    0     0   292k      0 --:--:-- --:--:-- --:--:--  292k\n",
       "\u001b[1;39m[\n",
       "  \u001b[0;32m\"Nightcap\"\u001b[0m\u001b[1;39m,\n",
       "  \u001b[0;32m\"Lady and the Tramp\"\u001b[0m\u001b[1;39m,\n",
@@ -2509,7 +2517,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 11747  100 11747    0     0   133k      0 --:--:-- --:--:-- --:--:--  133k\n",
+      "100 11747  100 11747    0     0   229k      0 --:--:-- --:--:-- --:--:--  229k\n",
       "\u001b[1;39m[\n",
       "  \u001b[0;32m\"Fantastic Mr. Fox\"\u001b[0m\u001b[1;39m,\n",
       "  \u001b[0;32m\"The Ring Two\"\u001b[0m\u001b[1;39m,\n",
@@ -2577,7 +2585,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 13049  100 13049    0     0   148k      0 --:--:-- --:--:-- --:--:--  148k\n",
+      "100 13049  100 13049    0     0   296k      0 --:--:-- --:--:-- --:--:--  296k\n",
       "\u001b[1;39m[\n",
       "  \u001b[0;32m\"Monster\"\u001b[0m\u001b[1;39m,\n",
       "  \u001b[0;32m\"Casino\"\u001b[0m\u001b[1;39m,\n",
