Recommender system integration

--- a/recommender/explore.ipynb
+++ b/recommender/explore.ipynb
@@ -2308,6 +2308,15 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity.to_pickle(os.path.join('..', 'static', 'recommender', 'similarity-5000.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2323,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2333,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2345,7 +2354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2372,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2381,28 +2390,28 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 12805  100 12805    0     0   142k      0 --:--:-- --:--:-- --:--:--  142k\n",
+      "100 12459  100 12459    0     0  56375      0 --:--:-- --:--:-- --:--:-- 56375\n",
       "\u001b[1;39m[\n",
-      "  \u001b[0;32m\"Una notte\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Nightcap\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Lady and the Tramp\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Teaching Mrs. Tingle\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Let's Go to Prison\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Quiet\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Irren ist männlich\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Mighty Joe Young\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Big Buck Bunny\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Hanging Up\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Opposite of Sex\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Go-Getter\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Boy in the Plastic Bubble\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Otto - The Disaster Movie\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Beauty and the Beast\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"My Sister's Keeper\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"When a Stranger Calls\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Get Rich or Die Tryin'\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Breed\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Slip\"\u001b[0m\u001b[1;39m\n",
+      "  \u001b[0;32m\"Alice in the Cities\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Hallam Foe\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Eastern Promises\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Last Mimzy\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Closer\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Cold Mountain\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Irina Palm\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Agnes and His Brothers\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Amazing Spider-Man\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Stomp the Yard\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Nell\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"An Unfinished Life\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Death at a Funeral\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Sounds of Sand\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"My Life Without Me\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Simpsons Movie\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Talk to Her\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Walk the Line\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Million Dollar Baby\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Hero\"\u001b[0m\u001b[1;39m\n",
       "\u001b[1;39m]\u001b[0m\n"
      ]
     }
@@ -2413,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2449,28 +2458,28 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 12875  100 12875    0     0   292k      0 --:--:-- --:--:-- --:--:--  292k\n",
+      "100 12316  100 12316    0     0  73309      0 --:--:-- --:--:-- --:--:-- 73309\n",
       "\u001b[1;39m[\n",
-      "  \u001b[0;32m\"Nightcap\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Lady and the Tramp\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Thunderbolt\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Dreamlife of Angels\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Explorers\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Grandma's Boy\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Cursed\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Beauty and the Beast\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Pacifier\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Unleashed\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Very Bad Things\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"My Lucky Stars\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Lion King II: Simba's Pride\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Brothers Solomon\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Magicians\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Balls of Fury\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Dersu Uzala\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Cry-Baby\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Lolita\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Hard Corps\"\u001b[0m\u001b[1;39m\n",
+      "  \u001b[0;32m\"Eastern Promises\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Valkyrie\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Momo\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Big\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Mr. Magorium's Wonder Emporium\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Wrath of Vajra\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Laura\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Taming of the Shrewd\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Tomboy\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Kill Bill: Vol. 1\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Apocalypse Now\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Eternal Sunshine of the Spotless Mind\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Talk to Her\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Paradise Now\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Billy Elliot\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Hero\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Anatomy of a Murder\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"All About My Mother\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Back to the Future\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Italian for Beginners\"\u001b[0m\u001b[1;39m\n",
       "\u001b[1;39m]\u001b[0m\n"
      ]
     }
@@ -2481,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2517,28 +2526,28 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 11747  100 11747    0     0   229k      0 --:--:-- --:--:-- --:--:--  229k\n",
+      "100 13500  100 13500    0     0  77586      0 --:--:-- --:--:-- --:--:-- 77586\n",
       "\u001b[1;39m[\n",
-      "  \u001b[0;32m\"Fantastic Mr. Fox\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Ring Two\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Being There\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Clash of the Titans\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Congo\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Freaky Friday\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Bugsy\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Moby Dick\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Dark Half\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Seven Dwarfs\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Zack and Miri Make a Porno\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Marvin's Room\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Phantoms\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Hanging Up\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Happy Feet\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Bless the Child\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Go-Getter\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Patriot Games\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Ginger Snaps\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Cobra\"\u001b[0m\u001b[1;39m\n",
+      "  \u001b[0;32m\"Momo\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Golden Compass\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Stardust\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Seeker: The Dark Is Rising\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The General's Daughter\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Bicentennial Man\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Clerks II\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Greatest Beer Run Ever\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Superman\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Agnes and His Brothers\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Hulk\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Amazing Spider-Man\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Others\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Me and My Sister\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Bonjour Tristesse\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Laura\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Exodus\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Bunny Lake Is Missing\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Door in the Floor\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"For Whom the Alchemist Exists\"\u001b[0m\u001b[1;39m\n",
       "\u001b[1;39m]\u001b[0m\n"
      ]
     }
@@ -2549,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2576,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2585,28 +2594,28 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 13049  100 13049    0     0   296k      0 --:--:-- --:--:-- --:--:--  296k\n",
+      "100 12862  100 12862    0     0  56660      0 --:--:-- --:--:-- --:--:-- 56660\n",
       "\u001b[1;39m[\n",
-      "  \u001b[0;32m\"Monster\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Casino\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Terminator Salvation\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Spider-Man 2\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Constantine\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Starship Troopers\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Apollo 13\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Wild Bunch\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Wag the Dog\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Driving Miss Daisy\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Straight Story\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The English Patient\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Chronicles of Narnia: The Lion, the Witch and the Wardrobe\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Pianist\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Good, the Bad and the Ugly\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Maria Full of Grace\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Erin Brockovich\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Matrix\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"Downfall\"\u001b[0m\u001b[1;39m,\n",
-      "  \u001b[0;32m\"The Last Samurai\"\u001b[0m\u001b[1;39m\n",
+      "  \u001b[0;32m\"Ryo Moroe Horror Series\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Master\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Wagner: Das Rheingold\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Iceman\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Casque d'Or\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Fireflies at El Mozote\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Heebie Jeebies\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Greatest Showman\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Being 97\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Windermere Children\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Oranges and Sunshine\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Islands in the Stream\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Blood Oath\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"The Keeper\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Sunset Boulevards\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Blaze\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"American Animals\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"A Vault of Victims\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Ransom\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0;32m\"Brutal Season\"\u001b[0m\u001b[1;39m\n",
       "\u001b[1;39m]\u001b[0m\n"
      ]
     }
@@ -2617,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
