Added new recommender

--- a/experiments/new.ipynb
+++ b/experiments/new.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "sys.path.append(os.path.join('..'))\n",
-    "from recommender.model import Embedder"
+    "from recommender.model import Embedder, Recommender, ids_to_titles"
    ]
   },
   {
@@ -62,7 +62,7 @@
       "INFO:root:Preprocessing 'overview'\n",
       "INFO:root:Injecting 'keywords' into 'overview'\n",
       "INFO:root:Vectorizing 'overview'...\n",
-      "INFO:root:Vectorizing 'overview' took 33.7215 s, for a vocabulary size of 5000.\n",
+      "INFO:root:Vectorizing 'overview' took 31.8165 s, for a vocabulary size of 5000.\n",
       "INFO:root:Stacking vectorized overview onto encoded 'genres'\n",
       "INFO:root:Reducing dimension to 16...\n",
       "INFO:root:Dimensionality reduction took 0 s.\n"
@@ -89,7 +89,7 @@
       "INFO:root:Preprocessing 'overview'\n",
       "INFO:root:Injecting 'keywords' into 'overview'\n",
       "INFO:root:Vectorizing 'overview'...\n",
-      "INFO:root:Vectorizing 'overview' took 33.3986 s, for a vocabulary size of 5000.\n",
+      "INFO:root:Vectorizing 'overview' took 33.4879 s, for a vocabulary size of 5000.\n",
       "INFO:root:Stacking vectorized overview onto encoded 'genres'\n",
       "INFO:root:Reducing dimension to None...\n",
       "INFO:root:Dimensionality reduction took 0 s.\n",
@@ -117,43 +117,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec = Recommender('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Embedder in [infer] mode.\n",
-      "INFO:root:Preprocessing 'genres'\n",
-      "INFO:root:Encoding 'genres'\n",
-      "INFO:root:Preprocessing 'overview'\n",
-      "INFO:root:Injecting 'keywords' into 'overview'\n",
-      "INFO:root:Vectorizing 'overview'...\n",
-      "INFO:root:Vectorizing 'overview' took 34.4184 s, for a vocabulary size of 5000.\n",
-      "INFO:root:Stacking vectorized overview onto encoded 'genres'\n",
-      "INFO:root:Reducing dimension to None...\n",
-      "INFO:root:Dimensionality reduction took 0 s.\n",
-      "INFO:root:Sparsifying embeddings...\n",
-      "INFO:root:Sparsifying embeddings took 0 s.\n",
-      "INFO:root:Saving embeddings to \"temp1.npz\"\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(<4803x16 sparse matrix of type '<class 'numpy.float64'>'\n",
-       " \twith 76848 stored elements in Compressed Sparse Row format>,\n",
-       " array([ 19995,    285, 206647, ..., 231617, 126186,  25975]))"
+       "[425, 8355, 9487, 82690, 57800, 5559, 9975, 950, 533, 8916]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "embedder.embed(movies, save_path='temp1.npz')"
+    "rec.recommend_by_id(425)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 similar movies to \"Ice Age\":\n",
+      "* Ice Age\n",
+      "* Ice Age: Dawn of the Dinosaurs\n",
+      "* A Bug's Life\n",
+      "* Wreck-It Ralph\n",
+      "* Ice Age: Continental Drift\n",
+      "* Bee Movie\n",
+      "* Curious George\n",
+      "* Ice Age: The Meltdown\n",
+      "* The Curse of the Were-Rabbit\n",
+      "* Antz\n"
+     ]
+    }
+   ],
+   "source": [
+    "rec.recommend_pprint(425, movies['title'])"
    ]
   }
  ],
