--- a/recommender/movie-10k-64.ipynb
+++ b/recommender/movie-10k-64.ipynb
@@ -5,10 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Top $10,000$ movies\n",
-    "\n",
     "Generates train (in-sample) and test (out-of-sample) embeddings using TF-IDF\n",
-    "trained on top $10,000$ movies."
+    "trained on top $10,000$ movies, performs SVD to reduce dimension to $64$."
    ]
   },
   {
@@ -71,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = os.path.join('embeddings', 'movie', 'top-10k')"
+    "MODEL_PATH = os.path.join('embeddings', 'movie', '10k-64')"
    ]
   },
   {
